# dialectus-engine

./: .gitattributes  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CLAUDE_THOUGHTS.md  CONFIG_GUIDE.md  DEPLOYMENT.md  MODERATION_TESTING.md  README.md  REFACTOR_PLAN.md  RELEASE_NOTES.md  TOURNAMENT.md  __init__.py  debate_config.example.json  example_moderation_test.py  example_simple_moderation_test.py  main.py  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  test_moderation.py  test_providers.py  test_providers_config.json  test_simple_moderation.py  web_server.py
cache/: openrouter_models.json
config/: openrouter_filters.json  settings.py
debate_engine/: __init__.py  context_builder.py  core.py  database.py  engine.py  judge_coordinator.py  models.py  prompt_builder.py  response_handler.py  round_manager.py  transcript.py  utils.py
formats/: __init__.py  base.py  oxford.py  parliamentary.py  public_forum.py  registry.py  socratic.py
judges/: __init__.py  ai_judge.py  base.py  ensemble_utils.py  factory.py
models/: base_types.py  cache_manager.py  manager.py  openrouter_types.py  providers.py
moderation/: README.md
tests/: README.md  __init__.py  conftest.py  test_cache_manager.py  test_config_settings.py  test_debate_models.py  test_format_registry.py  test_moderation_openai.py
tournaments/: README.md  __init__.py  api.py  database.py  debate_integration.py  manager.py  models.py
web/: __init__.py  api.py  app.py  auth_database.py  auth_schemas.py  auth_utils.py  debate_manager.py  debate_reponse.py  debate_setup_request.py  (+2 more)
(+91 files in other folders)
