[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialectus-engine"
version = "0.1.0"
description = "AI debate engine framework - importable Python library"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dialectus Team"}
]
dependencies = [
    "aiosmtplib>=4.0.2",
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.105.0",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]

[tool.setuptools.packages.find]
include = ["debate_engine*", "models*", "judges*", "formats*", "tournaments*", "config*", "web*"]