[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialectus-engine"
version = "0.1.0"
description = "AI debate engine framework - importable Python library"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dialectus Team"}
]
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.105.0",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
]

[tool.setuptools.packages.find]
include = ["debate_engine*", "models*", "judges*", "formats*", "tournaments*", "config*"]